--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
         "laravel-vite-plugin": "^0.7.8",
         "sass": "^1.56.1",
         "vite": "^4.3.9"
+    },
+    "dependencies": {
+        "jquery": "^3.7.0"
     }
 }
