--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -104,6 +104,9 @@
     "/img/profile/profile-4.webp": "/img/profile/profile-4.webp",
     "/img/profile/profile-6.webp": "/img/profile/profile-6.webp",
     "/js/app.js": "/js/app.js",
+    "/js/apps/contacts.js": "/js/apps/contacts.js",
+    "/js/apps/orders.js": "/js/apps/orders.js",
+    "/js/apps/users.js": "/js/apps/users.js",
     "/js/base/globals.js": "/js/base/globals.js",
     "/js/base/helpers.js": "/js/base/helpers.js",
     "/js/base/loader.js": "/js/base/loader.js",
@@ -134,6 +137,21 @@
     "/js/pages/storefront.detail.js": "/js/pages/storefront.detail.js",
     "/js/pages/storefront.filters.js": "/js/pages/storefront.filters.js",
     "/js/pages/storefront.home.js": "/js/pages/storefront.home.js",
+    "/js/plugins/carousels.js": "/js/plugins/carousels.js",
+    "/js/plugins/charts.js": "/js/plugins/charts.js",
+    "/js/plugins/contextmenu.js": "/js/plugins/contextmenu.js",
+    "/js/plugins/datatable.ajax.js": "/js/plugins/datatable.ajax.js",
+    "/js/plugins/datatable.boxedvariations.js": "/js/plugins/datatable.boxedvariations.js",
+    "/js/plugins/datatable.editableboxed.js": "/js/plugins/datatable.editableboxed.js",
+    "/js/plugins/datatable.editablerows.js": "/js/plugins/datatable.editablerows.js",
+    "/js/plugins/datatable.serverside.js": "/js/plugins/datatable.serverside.js",
+    "/js/plugins/lightbox.js": "/js/plugins/lightbox.js",
+    "/js/plugins/lists.js": "/js/plugins/lists.js",
+    "/js/plugins/notifies.js": "/js/plugins/notifies.js",
+    "/js/plugins/players.js": "/js/plugins/players.js",
+    "/js/plugins/progressbars.js": "/js/plugins/progressbars.js",
+    "/js/plugins/shortcuts.js": "/js/plugins/shortcuts.js",
+    "/js/plugins/sortables.js": "/js/plugins/sortables.js",
     "/js/scripts.js": "/js/scripts.js",
     "/js/vendor/autoComplete.min.js": "/js/vendor/autoComplete.min.js",
     "/js/vendor/autosize.min.js": "/js/vendor/autosize.min.js",
@@ -470,5 +488,8 @@
     "/icon/acorn-icons-medical.js": "/icon/acorn-icons-medical.js",
     "/icon/acorn-icons.js": "/icon/acorn-icons.js",
     "/icon/index.html": "/icon/index.html",
-    "/json/search.json": "/json/search.json"
+    "/json/contacts.json": "/json/contacts.json",
+    "/json/products.json": "/json/products.json",
+    "/json/search.json": "/json/search.json",
+    "/json/users.json": "/json/users.json"
 }
